[package]
name = "bread-bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
regex = "*"
serde = "*"
toml = "*"
diesel = { version = "*", features = ["postgres"] }
