[package]
name = "bread-bot"
version = "0.3.0"
edition = "2021"
authors = ["Brandon Mittman"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
clap = { version = "*", features = ["derive"] }
diesel = { version = "*", features = ["postgres"] }
regex = "*"
serde = "*"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
toml = "*"
unicode-segmentation = "*"
